--- a/app/index.html
+++ b/app/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AcmOctaneBase</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="author" content="Isaac J. Lee">
+        <meta name="description" content="Ember Octane workshop for Austin Code Mentorship">
+        <meta name="keywords" content="Isaac J. Lee, Ember, Ember.js, Ember CLI Mirage, Ember CLI Sass, Ember CSS Modules, Ember Octane">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>ACM Octane Workshop</title>
 
-    {{content-for "head"}}
+        {{content-for "head"}}
 
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/acm-octane-base.css">
+        <link rel="icon" type="image/png" sizes="256x256" href="/assets/favicon.png">
+        <link rel="apple-touch-icon" type="image/png" sizes="256x256" href="/assets/favicon.png">
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,600&display=swap" rel="stylesheet">
+        <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
+        <link integrity="" rel="stylesheet" href="{{rootURL}}assets/acm-octane-base.css">
 
-    {{content-for "head-footer"}}
-  </head>
-  <body>
-    {{content-for "body"}}
+        {{content-for "head-footer"}}
+    </head>
+    <body>
+        {{content-for "body"}}
 
-    <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/acm-octane-base.js"></script>
+        <script src="{{rootURL}}assets/vendor.js"></script>
+        <script src="{{rootURL}}assets/acm-octane-base.js"></script>
 
-    {{content-for "body-footer"}}
-  </body>
+        {{content-for "body-footer"}}
+    </body>
 </html>
